--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  animate_do: ^4.2.0
+  google_fonts: ^6.3.2
+  provider: ^6.1.5+1
+  flutter_svg: ^2.2.2
+  flutter_bloc: ^9.1.1
+  smooth_page_indicator:
+  flutter_screenutil: ^5.9.3
+
+
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +67,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/image/
+    - assets/icons/
+    - assets/splash_asstes/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
