--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   smooth_page_indicator:
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.0
+  flutter_localizations:
+    sdk: flutter
 
 
 
@@ -86,17 +88,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Norsal
+      fonts:
+        - asset: assets/text/norsal.ttf
+          weight: 700
+        - asset: assets/text/norsal_medium.otf
+          weight: 500
+        - asset: assets/text/norsal_regular.otf
+          weight: 400
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
