--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   animate_do: ^4.2.0
+  flutter_animate:
   google_fonts: ^6.3.2
   provider: ^6.1.5+1
   flutter_svg: ^2.2.2
@@ -74,7 +75,7 @@ flutter:
     - assets/image/
     - assets/icons/
     - assets/splash_asstes/
-    - assets/icons/
+    - assets/fonts/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -91,11 +92,11 @@ flutter:
   fonts:
     - family: Norsal
       fonts:
-        - asset: assets/text/norsal.ttf
+        - asset: assets/fonts/norsal.ttf
           weight: 700
-        - asset: assets/text/norsal_medium.otf
+        - asset: assets/fonts/norsal_medium.otf
           weight: 500
-        - asset: assets/text/norsal_regular.otf
+        - asset: assets/fonts/norsal_regular.otf
           weight: 400
   #
   # For details regarding fonts from package dependencies,
