--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   animate_do: ^4.2.0
   flutter_animate:
+  carousel_slider: ^5.1.1
   google_fonts: ^6.3.2
   provider: ^6.1.5+1
   flutter_svg: ^2.2.2
