--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   animate_do: ^4.2.0
-  flutter_animate:
+  flutter_animate: ^4.2.0
   carousel_slider: ^5.1.1
   google_fonts: ^6.3.2
   provider: ^6.1.5+1
