--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
     sdk: flutter
   flutter_rating: ^2.0.2
   google_maps_flutter: ^2.14.0
+  hive_flutter: ^1.1.0
+  hive: ^2.2.3
+  image_picker: ^1.2.1
 
 
 
@@ -61,6 +64,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  build_runner: ^2.10.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
