--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,9 @@ dependencies:
   hive_flutter: ^1.1.0
   hive: ^2.2.3
   image_picker: ^1.2.1
+  camera: ^0.11.3
+  path_provider: ^2.1.5
+  gallery_saver_plus: ^3.2.9
 
 
 
