--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   image_picker: ^1.2.1
   hive_flutter: ^1.1.0
   flutter_native_splash: ^2.4.7
+  flutter_polyline_points: ^3.1.0
 
 
 
