--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   hive_flutter: ^1.1.0
   flutter_native_splash: ^2.4.7
   flutter_polyline_points: ^3.1.0
+  device_preview: ^1.3.1
 
 
 
