--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_native_splash: ^2.4.7
   flutter_polyline_points: ^3.1.0
   device_preview: ^1.3.1
+  intl: ^0.20.2
 
 
 
@@ -71,12 +72,15 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.10.3
+  intl_utils: ^2.8.12
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
+
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
