--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,9 +55,14 @@ dependencies:
   image_picker: ^1.2.1
   hive_flutter: ^1.1.0
   flutter_native_splash: ^2.4.7
-  flutter_polyline_points: ^3.1.0
+  flutter_polyline_points: ^2.0.0
   device_preview: ^1.3.1
   intl: ^0.20.2
+  http: ^1.6.0
+  location: ^8.0.1
+  uuid: ^4.5.2
+  geolocator: ^14.0.2
+  permission_handler: ^12.0.1
 
 
 
