--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   permission_handler: ^12.0.1
   dio: ^5.9.0
   dartz: ^0.10.1
+  shared_preferences: ^2.5.4
+  get_it: ^9.2.0
 
 
 
